--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <main>
-        <form>
+        <form  
+        action="https://formspree.io/f/mgerrawd"
+        method="POST
+        >
             <div class = "form">
                 <label for ="name">Name: </label>
                 <input id ="name" type="text" name="name" />
