--- a/index.html
+++ b/index.html
@@ -9,23 +9,28 @@
 </head>
 <body>
     <main>
-        <form  
-        action="https://formspree.io/f/mgerrawd"
-        method="POST
-        >
-            <div class = "form">
-                <label for ="name">Name: </label>
-                <input id ="name" type="text" name="name" />
-            </div>
-            <div class = "form">
-                <label for = "email">Email: </label>
-                <input id ="email" type="text" name="email" />
-            </div>
-            <div class = "form">
-                <label for = "message">Message: </label>
-                <input id ="message" type="text" name="message" />
-            </div>
-          </form>
+      <form
+  action="https://formspree.io/f/mgerrawd"
+  method="POST"
+>
+<div>
+  <label>
+    Name:
+    <input type = "name" type="text" name = "name" />
+  </label>
+</div>
+  <label>
+    Email:
+    <input type="email" type="text" name="_replyto">
+  </label>
+<div>
+  <label>
+    Message:
+    <textarea name="message" type="text" ></textarea>
+  </label>
+</div>
+  <button type="submit">Send</button>
+      </form>
       </main>
 </body>
 </html>
